--- a/SOURCES/nagrestconf-1/debian/changelog
+++ b/SOURCES/nagrestconf-1/debian/changelog
@@ -1,3 +1,9 @@
+nagrestconf (1.0.10) UNRELEASED; urgency=low
+
+  * Bugfixes and features.
+
+ -- Mark Clarkson <mark.clarkson@smorg.co.uk>  Wed, 31 Dec 2012 09:40:00 +0000
+
 nagrestconf (1.0.9) UNRELEASED; urgency=low
 
   * Added schedulehostdowntime and delhostdowntime
